fixing layout issues

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ img {
   display: flex;
   flex-direction: column;
   align-content: start;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .card h1 {
@@ -131,7 +131,7 @@ img {
   width: fit-content;
   border: none;
   outline: transparent;
-  padding: 0.5rem 1.5rem;
+  padding: 0.7rem 1.5rem;
   border-radius: 3rem;
   transition: 0.12s ease-in;
   margin-top: auto;
